added passenger gem

--- a/app/views/patient/new_lab_results.html.erb
+++ b/app/views/patient/new_lab_results.html.erb
@@ -13,10 +13,10 @@
     }
 </style>
 
-
+ 
 
 <script>
-    var tt_cancel_destination = "/patient/show?identifier=<%= params[:identifier]%>";
+    var tt_cancel_destination = "/patient/barcode";
 
 
     function set_ajaxURL_for_suggestions(url, filter_value) {
